--- a/.github/workflows/build-ps5.yml
+++ b/.github/workflows/build-ps5.yml
@@ -31,7 +31,7 @@ jobs:
           haxe-version: ${{ env.HAXE_VERSION }}
       - name: Install Haxe Dependencies
         run: |
-          haxelib git hxwell https://github.com/barisyild/hxwell
+          git clone https://github.com/barisyild/hxwell.git
           haxelib install haxe-concurrent 5.1.4
           haxelib install hscript 2.6.0
           haxelib install rulescript 0.2.0
