--- a/.github/workflows/build-ps5.yml
+++ b/.github/workflows/build-ps5.yml
@@ -9,9 +9,6 @@ env:
   HAXE_VERSION: 4.3.6
   SDK_VERSION: v0.24.1
 
-permissions:
-  contents: read
-
 jobs:
   # Single deploy job since we're just deploying
   deploy:
@@ -36,7 +33,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: barisyild/hxwell
-          token: ${{ secrets.GITHUB_TOKEN }}  # veya ${{ secrets.ACTIONS_PAT }}
+          token: ${{ secrets.HXWELL_TOKEN }}  # veya ${{ secrets.ACTIONS_PAT }}
           path: hxwell
       - name: Install Haxe Dependencies
         run: |
