--- a/.github/workflows/build-ps5.yml
+++ b/.github/workflows/build-ps5.yml
@@ -81,7 +81,7 @@ jobs:
           name: airpsx.plugin
           path: airpsx.plugin
       - uses: actions/upload-release-asset@v1
-        if: ${{ github.event_name }} == "release"
+        if: ${{ github.event_name == 'release' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -90,7 +90,7 @@ jobs:
           asset_name: airpsx.elf
           asset_content_type: application/x-binary
       - uses: actions/upload-release-asset@v1
-        if: ${{ github.event_name }} == "release"
+        if: ${{ github.event_name == 'release' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
