--- a/.github/workflows/build-ps5.yml
+++ b/.github/workflows/build-ps5.yml
@@ -75,13 +75,17 @@ jobs:
         run: |
           export PS5_PAYLOAD_SDK=/opt/ps5-payload-sdk
           haxe release.hxml
+      - name: Create websrv zip
+        run: |
+          zip -r airpsx.zip websrv_template
       - uses: actions/upload-artifact@v4
         with:
           name: airpsx.elf
           path: airpsx.elf
-      - name: Create websrv zip
-        run: |
-          zip -r airpsx.zip websrv_template
+      - uses: actions/upload-artifact@v4
+        with:
+          name: airpsx.zip
+          path: airpsx.zip
       - uses: actions/upload-release-asset@v1
         if: ${{ github.event_name == 'release' }}
         env:
