--- a/.github/workflows/build-ps5.yml
+++ b/.github/workflows/build-ps5.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Create websrv zip
         run: |
           mv websrv_template websrv
-          zip -r airpsx.zip websrv
+          cd websrv && zip -r ../airpsx.zip .
       - uses: actions/upload-artifact@v4
         with:
           name: airpsx.elf
