--- a/.github/workflows/build-ps5.yml
+++ b/.github/workflows/build-ps5.yml
@@ -79,8 +79,8 @@ jobs:
           haxe release.hxml
       - name: Create websrv zip
         run: |
-          mv websrv_template websrv
-          cd websrv && zip -r ../airpsx.zip .
+          mv websrv_template airpsx
+          zip -r airpsx.zip airpsx
       - uses: actions/upload-artifact@v4
         with:
           name: airpsx.elf
