add crypto library to PS5 build workflow

--- a/.github/workflows/build-ps5.yml
+++ b/.github/workflows/build-ps5.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           mkdir -p ${{ env.HAXELIB_PATH }}/hxwell
           echo "${{ github.workspace }}/hxwell" > ${{ env.HAXELIB_PATH }}/hxwell/.dev
+          haxelib git crypto https://github.com/HaxeFoundation/crypto
           haxelib git haxe-crypto https://github.com/barisyild/haxe-crypto
           haxelib git hxvm-lua https://github.com/kevinresol/hxvm-lua
           haxelib git linc_lua https://github.com/kevinresol/linc_lua
