fix haxelib git command syntax in GitHub Actions workflow

--- a/.github/workflows/build-orbis.yml
+++ b/.github/workflows/build-orbis.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           mkdir -p ${{ env.HAXELIB_PATH }}/hxwell
           echo "${{ github.workspace }}/hxwell" > ${{ env.HAXELIB_PATH }}/hxwell/.dev
-          haxelib git https://github.com/hxwell/hxwell hxwell
+          haxelib git hxwell https://github.com/hxwell/hxwell
           haxelib git haxe-crypto https://github.com/barisyild/haxe-crypto
           haxelib git hxvm-lua https://github.com/kevinresol/hxvm-lua
           haxelib git linc_lua https://github.com/kevinresol/linc_lua
