--- a/.github/workflows/build-orbis.yml
+++ b/.github/workflows/build-orbis.yml
@@ -9,6 +9,7 @@ on:
 env:
   HAXE_VERSION: 4.3.6
   SDK_VERSION: v0.5.2
+  SDK_PATH: /opt/ps4-payload-sdk/OpenOrbis/PS4Toolchain
 
 jobs:
   build-ps4:
@@ -69,7 +70,7 @@ jobs:
           echo "Downloading Toolchain..."
           wget https://github.com/OpenOrbis/OpenOrbis-PS4-Toolchain/releases/download/${{ env.SDK_VERSION }}/${{ env.SDK_VERSION }}.tar.gz -O toolchain.tar.gz
           
-          export OO_PS4_TOOLCHAIN=/opt/ps4-payload-sdk
+          export OO_PS4_TOOLCHAIN=${{ env.SDK_PATH }}
           
           echo "Creating directory and extracting..."
           mkdir -p $OO_PS4_TOOLCHAIN
@@ -79,8 +80,7 @@ jobs:
 
       - name: Build Project
         run: |
-          export OO_PS4_TOOLCHAIN=/opt/ps4-payload-sdk
-          export PS4_PAYLOAD_SDK=/opt/ps4-payload-sdk
+          export OO_PS4_TOOLCHAIN=${{ env.SDK_PATH }}
           haxelib run hxwell build cpp -hxml orbis.hxml -export Export/orbis
 
       - name: Upload Artifact
