fix: remove `--strip-components=1` from `tar` command in GitHub Actions workflow

--- a/.github/workflows/build-orbis.yml
+++ b/.github/workflows/build-orbis.yml
@@ -74,7 +74,7 @@ jobs:
           
           echo "Creating directory and extracting..."
           mkdir -p $OO_PS4_TOOLCHAIN
-          tar -xzf toolchain.tar.gz -C $OO_PS4_TOOLCHAIN --strip-components=1
+          tar -xzf toolchain.tar.gz
                     
           echo "Toolchain setup complete."
 
