fix: update `tar` command to extract toolchain to `/opt` and add debug step in GitHub Actions workflow

--- a/.github/workflows/build-orbis.yml
+++ b/.github/workflows/build-orbis.yml
@@ -73,12 +73,13 @@ jobs:
           export OO_PS4_TOOLCHAIN=${{ env.SDK_PATH }}
           
           echo "Creating directory and extracting..."
-          tar -xzf toolchain.tar.gz
+          tar -xzf -C /opt toolchain.tar.gz
                     
           echo "Toolchain setup complete."
 
       - name: Debug
         run: |
+          ls -la /opt
           ls -la $OO_PS4_TOOLCHAIN
           ls -la /opt/OpenOrbis/PS4Toolchain/include
 
