--- a/.github/workflows/build-orbis.yml
+++ b/.github/workflows/build-orbis.yml
@@ -88,6 +88,12 @@ jobs:
           export OO_PS4_TOOLCHAIN=${{ env.SDK_PATH }}
           haxelib run hxwell build cpp -hxml orbis.hxml -export Export/orbis
 
+      - name: Generate PKG
+        run: |
+          cd pkgroot
+          chmod +x generate_pkg.sh
+          ./generate_pkg.sh
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
