--- a/.github/workflows/build-orbis.yml
+++ b/.github/workflows/build-orbis.yml
@@ -69,12 +69,14 @@ jobs:
       - name: Setup OpenOrbis PS4 Toolchain
         run: |
           echo "Downloading Toolchain..."
-          wget https://github.com/OpenOrbis/OpenOrbis-PS4-Toolchain/releases/download/v0.5.3/toolchain-llvm-12.zip -O toolchain.tar.gz
+          wget https://github.com/OpenOrbis/OpenOrbis-PS4-Toolchain/releases/download/v0.5.3/toolchain-llvm-12.zip -O /toolchain-llvm-12.zip
+          unzip /toolchain-llvm-12.zip
+          
           
           export OO_PS4_TOOLCHAIN=${{ env.SDK_PATH }}
           
           echo "Creating directory and extracting..."
-          tar -xzf toolchain.tar.gz -C /opt
+          tar -xzf toolchain-llvm-12.tar.gz -C /opt
                     
           echo "Toolchain setup complete."
       - name: Install LibSSL 1.1
